tests/ui/consts/miri_unleashed/const_refers_to_static_cross_crate.stderr
error[E0080]: it is undefined behavior to use this value
  --> $DIR/const_refers_to_static_cross_crate.rs:12:1
   |
LL | const SLICE_MUT: &[u8; 1] = {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ constructing invalid value: encountered reference to mutable memory in `const`
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: $SIZE, align: $ALIGN) {
               HEX_DUMP
           }

error[E0080]: it is undefined behavior to use this value
  --> $DIR/const_refers_to_static_cross_crate.rs:17:1
   |
LL | const U8_MUT: &u8 = {
   | ^^^^^^^^^^^^^^^^^ constructing invalid value: encountered reference to mutable memory in `const`
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: $SIZE, align: $ALIGN) {
               HEX_DUMP
           }

error[E0080]: it is undefined behavior to use this value
  --> $DIR/const_refers_to_static_cross_crate.rs:23:1
   |
LL | const U8_MUT2: &u8 = {
   | ^^^^^^^^^^^^^^^^^^ constructing invalid value: encountered reference to mutable memory in `const`
   |
   = note: The rules on what exactly is undefined behavior aren't clear, so this check might be overzealous. Please open an issue on the rustc repository if you believe it should not be considered undefined behavior.
   = note: the raw bytes of the constant (size: $SIZE, align: $ALIGN) {
               HEX_DUMP
           }

error[E0080]: evaluation of constant value failed
  --> $DIR/const_refers_to_static_cross_crate.rs:29:15
   |
LL |         match static_cross_crate::OPT_ZERO {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constant accesses mutable global memory

error: could not evaluate constant pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:40:9
   |
LL |         SLICE_MUT => true,
   |         ^^^^^^^^^

error: could not evaluate constant pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:48:9
   |
LL |         U8_MUT => true,
   |         ^^^^^^

error: could not evaluate constant pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:58:9
   |
LL |         U8_MUT2 => true,
   |         ^^^^^^^

error: could not evaluate constant pattern
  --> $DIR/const_refers_to_static_cross_crate.rs:65:9
   |
LL |         U8_MUT3 => true,
   |         ^^^^^^^

warning: skipping const checks
   |
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:14:15
   |
LL |     unsafe { &static_cross_crate::ZERO }
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:19:15
   |
LL |     unsafe { &static_cross_crate::ZERO[0] }
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:25:17
   |
LL |     unsafe { &(*static_cross_crate::ZERO_REF)[0] }
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static_cross_crate.rs:29:15
   |
LL |         match static_cross_crate::OPT_ZERO {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
